Update Telegram Token, INIT, Multiple Errors during Start
Signed-off-by: Keno Oelrichs.Garcia <keno.oelrichs.garcia@uni-oldenburg.de>